--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "log4js": "^0.6.38",
+    "mongoose": "^4.5.10",
+    "morgan": "^1.7.0"
   }
 }
