--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-jwt": "^3.4.0",
     "isemail": "^2.2.1",
     "jsonwebtoken": "^7.1.9",
     "log4js": "^0.6.38",
